<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="visible"
    android:layout_marginBottom="16dp"
    android:elevation="16dp"
    android:backgroundTint="#16c3c3c3"
    android:background="@drawable/round_border"
    android:clickable="true">

    <LinearLayout
        android:padding="15dp"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/profile_image" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contextClickable="false"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="harshit"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:textSize="10sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:text="19 mins ago"
                        android:textSize="10sp"
                        android:visibility="visible" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/follow"
                android:layout_width="121dp"
                android:layout_height="37dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="#16c3c3c3"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:text="Follow"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/name" />

        </LinearLayout>

        <TextView
            android:id="@+id/post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_margin="8dp"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/selected_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:background="@drawable/no_comments"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/like_button"
                android:layout_width="35dp"
                android:layout_height="36dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/thumbs_up"
                android:clickable="true"
                android:contentDescription="@string/like" />


            <ImageButton
                android:id="@+id/comment_button"
                android:layout_width="35dp"
                android:layout_height="36dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/comment"
                android:clickable="true"
                android:contentDescription="@string/comment" />


            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="35dp"
                android:layout_height="36dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/send"
                android:clickable="true"
                android:contentDescription="@string/share" />

            <ImageButton
                android:id="@+id/save_button"
                android:layout_width="35dp"
                android:layout_height="36dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/save"
                android:clickable="true"
                android:contentDescription="@string/save"
                tools:ignore="TouchTargetSizeCheck" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
